kustomize/apps/bubble/overlays/bubble/bubble-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bubble-app
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
