kustomize/apps/bubble/overlays/bubble/bubble-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bubble-animation
  name: bubble-animation
  namespace: bubble-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bubble-animation
  strategy: {}
  template:
    metadata:
      labels:
        app: bubble-animation
    spec:
      containers:
      - image: quay.io/rhdevelopers/bgd:1.0.0
        name: bubble-animation
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "150m"
