kustomize/apps/bubble/overlays/bubble/bubble-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bubble-animation
  name: bubble-animation
  namespace: bubble-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bubble-animation
