kustomize/apps/bubble/overlays/bubble/bubble-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bubble-animation
  name: bubble-animation
  namespace: bubble-app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bubble-animation
    weight: 100
